--- a/Proyecto_almacen.csproj
+++ b/Proyecto_almacen.csproj
@@ -53,6 +53,7 @@
     <Compile Include="login.Designer.cs">
       <DependentUpon>login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modelos\Global.cs" />
     <Compile Include="Modelos\DbConexion.cs" />
     <Compile Include="GestionUsuario.cs">
       <SubType>Form</SubType>
@@ -62,6 +63,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReporteLog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReporteLog.Designer.cs">
+      <DependentUpon>ReporteLog.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="GestionUsuario.resx">
       <DependentUpon>GestionUsuario.cs</DependentUpon>
     </EmbeddedResource>
@@ -77,6 +84,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ReporteLog.resx">
+      <DependentUpon>ReporteLog.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
